[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Nodes/Scripts/Player Response Node.gd" type="Script" id=1]

[node name="PlayerResponseNode" type="GraphNode"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -50.0
margin_right = 125.0
margin_bottom = 50.0
rect_min_size = Vector2( 250, 100 )
title = "Player Response"
show_close = true
comment = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 0.235294, 0.231373, 0.843137, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 0.227451, 0.670588, 0.278431, 1 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 270.0
margin_bottom = 97.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 200.0
margin_bottom = 73.0

[node name="TextEdit" type="TextEdit" parent="HBoxContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 25.0
rect_min_size = Vector2( 200, 25 )

[node name="ColorPickerButton" type="ColorPickerButton" parent="HBoxContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 200.0
margin_bottom = 49.0
size_flags_vertical = 0
color = Color( 1, 1, 1, 1 )
edit_alpha = false

[node name="OptionButton" type="OptionButton" parent="HBoxContainer/VBoxContainer"]
margin_top = 53.0
margin_right = 200.0
margin_bottom = 73.0
text = "Dialog"
align = 1
items = [ "Dialog", null, false, 1, null, "Open Role Screen", null, false, 3, null, "Execute Command", null, false, 4, null, "Close Dialog", null, false, 0, null, "Disabled", null, false, 3, null ]
selected = 0

[node name="CommandText" type="TextEdit" parent="HBoxContainer/VBoxContainer"]
visible = false
margin_top = 53.0
margin_right = 200.0
margin_bottom = 78.0
rect_min_size = Vector2( 0, 25 )
text = "Command"

[node name="AddNewDialog" type="Button" parent="HBoxContainer"]
margin_left = 204.0
margin_right = 254.0
margin_bottom = 73.0
rect_min_size = Vector2( 50, 50 )
text = "+"

[connection signal="close_request" from="." to="." method="_on_PlayerResponseNode_close_request"]
[connection signal="gui_input" from="." to="." method="_on_PlayerResponseNode_gui_input"]
[connection signal="color_changed" from="HBoxContainer/VBoxContainer/ColorPickerButton" to="." method="_on_ColorPickerButton_color_changed"]
[connection signal="item_selected" from="HBoxContainer/VBoxContainer/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="HBoxContainer/AddNewDialog" to="." method="_on_AddNewDialog_pressed"]
